apps/base/ntfy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-svc  
spec:
  type: ClusterIP
  selector:
    app: ntfy-pod
  ports:
    - name: http-ntfy-out
      port: 80
      protocol: TCP
      targetPort: http-ntfy
