apps/base/ntfy/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy-ingress
  namespace: ntfy
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: ntfy-svc
      port:
        number: 80
  tls:
    - hosts:
        - ntfy
